--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,13 @@
+version: '3.8'
 services:
-  rabbitmq:
-    image: rabbitmq:3.9-management
-    container_name: rabbitmq
+  gateway-service:
+    build: .
     ports:
-      - '15672:15672'
-      - '5672:5672'
+      - '3000:3000'
     environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+      - RABBITMQ_URL=amqp://rabbitmq:5672
+    networks:
+      - game-system-network
+networks:
+  game-system-network:
+    external: true
